Changes in version 2.6-0

  o Linear and generalized linear mixed models dialogs added.
  
  o New R Commander hex sticker.
  
  o Small fixes.

Changes in version 2.5-2

  o Updated Korean translation (thanks to Jong-Hwa Shin).
  
  o Fixes to Chinese translation (thanks to Tsung-wu Ho).
  
  o Small fixes.
  
Changes in version 2.5-1

  o Updated translations (with thanks): Basque (Jose Ramon Rueda), French (Milan Bouchet-Valat), Indonesian (I Made Tirta), Japanese (Takaharu Araki).
  
  o Depend on R >= version 3.5.0.

Changes in version 2.5-0

  o Added Predictor Effect Plots and Response Transformation dialogs to Models menu.
  
  o New Transform Variables Toward Normality dialog in Statistics > Summaries menu.
  
  o New Symmetry Boxplot dialog in Graphs menu.
  
  o New Influence Index Plot dialog in Models > Graphs menu.
  
  o QQ plots may be drawn by groups.
  
  o Index plots may be marked by groups.
  
  o Enhancements to Density Plot dialog.
  
  o Interface improvements.
  
  o Updated translations (with thanks): Chinese (Tsung-wu Ho), Indonesian (I Made Tirta), Polish (Lukasz Daniel), Russian (Alexey Shipunov), Spanish (Manuel Munoz Marquez).

Changes in version 2.4-4

  o Fixed bug in recode dialog due to inconsistency with Recode() in car 3.0-0 (reported by Stylianos Serghiou).
  
  o Removed natwidth, natheight parameters from \includegraphics{} in Getting Started manual to avoid omission of figures from CRAN build of manual.

Changes to version 2.4-3

  o Updated several dialogs (scatterplot, scatterplot matrix, density plot, boxplot, QQ plot, 3D scatterplot, residual QQ plot, C+R plots, AV plots, influence plot, effect plots) for version 3.0-0 of the car package and version 4.0-1 of the effects package.

Changes to version 2.4-2

  o Updated Slovenian and Spanish translations (thanks to Matjaz Jeran and Manuel Munoz Marquez).

  o A few updates to R-Rcmdr.pot supplying previously missing messages for translation.

Changes to version 2.4-1
